# seflpr

./: .env.example  .gitignore  SelfPR.docx  docker-compose.yml  keys
.claude/: launch.json  (+1 more)
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 17cbce905d8c_add_prompt_configs.py  8be067d81750_initial.py  a3b5c7d9e1f2_add_ingest_and_dashboard_fields.py  b1c2d3e4f5a6_add_phone_number.py  e1224ca3b9ed_add_revision_type_and_ai_review.py  f18f84939a98_add_point_balance_and_transactions.py
backend/app/: main.py
backend/app/agents/: gap_analyzer.py  generator.py  humanizer.py  interview_feedback.py  interview_generator.py  prompt_loader.py  researcher.py  reviewer.py  reviser.py
backend/app/agents/prompts/: gap_prompts.py  generator_prompts.py  humanizer_prompts.py  interview_prompts.py  reviewer_prompts.py  reviser_prompts.py
backend/app/api/v1/: admin.py  auth.py  interviews.py  points.py  profiles.py  projects.py  router.py
backend/app/core/: config.py  database.py  dependencies.py  encryption.py  security.py
backend/app/models/: __init__.py  company.py  interview.py  payment.py  profile.py  project.py  prompt_config.py  user.py
backend/app/repositories/: company_repo.py  interview_repo.py  profile_repo.py  project_repo.py  user_repo.py
backend/app/schemas/: admin.py  auth.py  interview.py  point.py  profile.py  project.py
backend/app/services/: admin_service.py  auth_service.py  interview_service.py  point_service.py  profile_service.py  project_service.py  sms_service.py
backend/scripts/: reset_admin.py  seed_superadmin.py
(+52 files in other folders)
